--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<!--html lang="en"-->
+<html>
 <head>
-    <title>Nathan — Personal Portfolio Website</title>
+    <title>Михаил - персональное портфолио</title>
     <link rel="icon" href="images/icon.webp" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
-    <meta content="Nathan — Personal Portfolio Website" name="description" >
+    <meta content="Михаил - персональное портфолио" name="description" >
     <meta content="" name="keywords" >
     <meta content="" name="author" >
     <!-- CSS Files
@@ -39,15 +39,15 @@
             <section class="no-top">
 
                 <div class="text-fit-wrapper">
-                    <h1 class="text-fit wow">NATHAN</h1>
+                    <h1 class="text-fit wow">МИХАИЛ</h1>
                     <div class="d-menu-1 wow" data-wow-delay=".3s">
                         <ul>
-                            <li class="active"><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Me</a></li>
-                            <li><a href="services.html">What I Do</a></li>
-                            <li><a href="works.html">Works</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Hire Me</a></li>
+                            <li class="active"><a href="index.html">Главная</a></li>
+                            <li><a href="about.html">Обо мне</a></li>
+                            <li><a href="services.html">Чем занимаюсь</a></li>
+                            <li><a href="works.html">Работы</a></li>
+                            <li><a href="blog.html">Блог</a></li>
+                            <li><a href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -60,8 +60,8 @@
                     <div class="row align-items-center g-4 gx-5">
                         <div class="col-lg-6">
                             <div class="relative">
-                                <div class="subtitle wow fadeInUp" data-wow-delay=".3s">Available for Work</div>
-                                <h1 class="lh-1 wow fadeInUp" data-wow-delay=".4s">A Website Designer from New York</h1>
+                                <div class="subtitle wow fadeInUp" data-wow-delay=".3s">Готов для работы</div>
+                                <h1 class="lh-1 wow fadeInUp" data-wow-delay=".4s">Контент. Реклама. Верстка. Иллюстрации. Полиграфия. Сайты</h1>
                             </div>
                             <p class="lead wow fadeInUp" data-wow-delay=".5s">
                                 My journey into web design started with a love for both art and technology, which led me to pursue a career where I could blend these interests seamlessly. 
@@ -69,7 +69,7 @@
 
                             <div class="spacer-10"></div>
                             
-                            <a class="w-150px btn-line wow fadeIn" data-wow-delay=".6s" href="about.html">About Me</a>
+                            <a class="w-150px btn-line wow fadeIn" data-wow-delay=".6s" href="about.html">Обо мне</a>
 
                         </div>
 
@@ -90,7 +90,7 @@
                         <div class="col-md-3 col-sm-6 mb-sm-30">
                             <div class="de_count text-center fs-15 wow fadeInRight" data-wow-delay=".2s">
                                 <h3 class="fs-48 mb-1"><span class="timer" data-to="315" data-speed="3000">0</span></h3>
-                                <div class="fs-15">Projects Done</div>
+                                <div class="fs-15">Мое портфолио</div>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 mb-sm-30">
@@ -113,13 +113,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-2">
-                            <div class="subtitle wow fadeInUp" data-wow-delay=".3s">About Me</div>
+                            <div class="subtitle wow fadeInUp" data-wow-delay=".3s">Обо мне</div>
                         </div>
                         <div class="col-lg-10">                            
                             <h2 class="lh-1  wow fadeInUp" data-wow-delay=".4s">Transforming your vision into a dynamic web experience through meticulously crafted designs, intuitive user interfaces, and robust functionality.</h2>
                             <div class="row g-4 wow fadeInUp" data-wow-delay=".5s">
                                 <div class="col-sm-6">
-                                    <p>Hi there! I’m Nathan, a web designer with a passion for creating exceptional digital experiences. With over 15 years in the industry, I have skills in designing websites that are not only visually appealing but also functional and user-friendly.</p>
+                                    <p>Приветствую всех! Около 30 лет работаю в рекламе, полиграфии. Опыт работы от приема работы у заказчика (составление технического задания, прием материалов), ведение проектов, дизайн,профессиональная обработка фотографий, иллюстраций, верстка (пакет Adobe).</p>
                                 </div>
 
                                 <div class="col-sm-6">
